@@ -79,6 +79,16 @@
 							</config>
 						</TCEforms>
 					</sortBy>
+					<resultsPerPage>
+						<TCEforms>
+							<exclude>1</exclude>
+							<label>Results per Page</label>
+							<config>
+								<type>input</type>
+								<eval>int+</eval>
+							</config>
+						</TCEforms>
+					</resultsPerPage>
 					<boostFunction>
 						<TCEforms>
 							<exclude>1</exclude>
